[ADD] Adding BaseEmbeddable class for shared model and fixing unit tests